--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href=".favicon.ico" />
     <title>Donkey Farm Games</title>
-    <link href="/css/app.df0f40f0.css" rel="preload" as="style" />
-    <link href="/js/app.9eeff38e.js" rel="preload" as="script" />
-    <link href="/js/chunk-vendors.712c2d37.js" rel="preload" as="script" />
-    <link href="/css/app.df0f40f0.css" rel="stylesheet" />
+    <link href="./css/app.df0f40f0.css" rel="preload" as="style" />
+    <link href="./js/app.9eeff38e.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.712c2d37.js" rel="preload" as="script" />
+    <link href="./css/app.df0f40f0.css" rel="stylesheet" />
   </head>
   <body class="bg-gray-200">
     <noscript
@@ -19,7 +19,7 @@
       ></noscript
     >
     <div id="app"></div>
-    <script src="/js/chunk-vendors.712c2d37.js"></script>
-    <script src="/js/app.9eeff38e.js"></script>
+    <script src="./js/chunk-vendors.712c2d37.js"></script>
+    <script src="./js/app.9eeff38e.js"></script>
   </body>
 </html>
