--- a/test/index.html
+++ b/test/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="./favicon.ico" />
-    <title>Donkey Farm Games</title>
-    <link href="./css/app.aa88df86.css" rel="preload" as="style" />
-    <link href="./js/app.984afee7.js" rel="preload" as="script" />
-    <link href="./js/chunk-vendors.7318c483.js" rel="preload" as="script" />
-    <link href="./css/app.aa88df86.css" rel="stylesheet" />
-  </head>
-  <body class="bg-gray-200">
-    <noscript
-      ><strong
-        >We're sorry but Donkey Farm Games doesn't work properly without
-        JavaScript enabled. Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-    <script src="./js/chunk-vendors.7318c483.js"></script>
-    <script src="./js/app.984afee7.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>Donkey Farm Games</title><link href="/css/app.b738e2ce.css" rel="preload" as="style"><link href="/js/app.4855a0f3.js" rel="preload" as="script"><link href="/js/chunk-vendors.7318c483.js" rel="preload" as="script"><link href="/css/app.b738e2ce.css" rel="stylesheet"></head><body class="bg-gray-200"><noscript><strong>We're sorry but Donkey Farm Games doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.7318c483.js"></script><script src="/js/app.4855a0f3.js"></script></body></html>
