--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="title" content="Donkey Farm Games - Maker of Fusion Factory">
+    <meta name="description" content="Donkey Farm Games makes physical games to enjoy together">
     <link rel="icon" href="/favicon.ico">
     <title>Donkey Farm Games</title>
     <link href="/css/app.7edda78f.css" rel="preload" as="style">
