--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="title" content="Donkey Farm Games - Maker of Fusion Factory">
-    <meta name="description" content="Donkey Farm Games makes physical games to enjoy together">
-    <link rel="icon" href="/favicon.ico">
-    <title>Donkey Farm Games</title>
-    <link href="/css/app.7edda78f.css" rel="preload" as="style">
-    <link href="/js/app.1f6d6a20.js" rel="preload" as="script">
-    <link href="/js/chunk-vendors.9aab430f.js" rel="preload" as="script">
-    <link href="/css/app.7edda78f.css" rel="stylesheet">
-</head>
-
-<body class="bg-gray-200"><noscript><strong>We're sorry but Donkey Farm Games doesn't work properly without JavaScript
-            enabled. Please enable it to continue.</strong></noscript>
-    <div id="app"></div>
-    <script src="/js/chunk-vendors.9aab430f.js"></script>
-    <script src="/js/app.1f6d6a20.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="title" content="Donkey Farm Games - Creating and publishing games"><meta name="description" content="Donkey Farm Games makes physical games to enjoy together"><link rel="icon" href="/favicon.ico"><title>Donkey Farm Games</title><link href="/css/app.35065ece.css" rel="preload" as="style"><link href="/js/app.1f6d6a20.js" rel="preload" as="script"><link href="/js/chunk-vendors.9aab430f.js" rel="preload" as="script"><link href="/css/app.35065ece.css" rel="stylesheet"></head><body class="bg-gray-200"><noscript><strong>We're sorry but Donkey Farm Games doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.9aab430f.js"></script><script src="/js/app.1f6d6a20.js"></script></body></html>
