--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="title" content="Donkey Farm Games - Creating and publishing games"><meta name="description" content="Donkey Farm Games makes physical games to enjoy together"><link rel="icon" href="/favicon.ico"><title>Donkey Farm Games</title><link href="/css/app.b3b939f8.css" rel="preload" as="style"><link href="/js/app.43f16510.js" rel="preload" as="script"><link href="/js/chunk-vendors.3d81aa99.js" rel="preload" as="script"><link href="/css/app.b3b939f8.css" rel="stylesheet"></head><body class="bg-gray-200"><noscript><strong>We're sorry but Donkey Farm Games doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.3d81aa99.js"></script><script src="/js/app.43f16510.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="title" content="Donkey Farm Games - Creating and publishing games"><meta name="description" content="Donkey Farm Games makes physical games to enjoy together"><link rel="icon" href="/favicon.ico"><title>Donkey Farm Games</title><script>// Single Page Apps for GitHub Pages
+          // MIT License
+          // https://github.com/rafgraph/spa-github-pages
+          // This script checks to see if a redirect is present in the query string,
+          // converts it back into the correct url and adds it to the
+          // browser's history using window.history.replaceState(...),
+          // which won't cause the browser to attempt to load the new url.
+          // When the single page app is loaded further down in this file,
+          // the correct url will be waiting in the browser's history for
+          // the single page app to route accordingly.
+          (function(l) {
+            if (l.search[1] === '/' ) {
+              var decoded = l.search.slice(1).split('&').map(function(s) { 
+                return s.replace(/~and~/g, '&')
+              }).join('?');
+              window.history.replaceState(null, null,
+                  l.pathname.slice(0, -1) + decoded + l.hash
+              );
+            }
+          }(window.location))</script><link href="/css/app.b3b939f8.css" rel="preload" as="style"><link href="/js/app.366d851b.js" rel="preload" as="script"><link href="/js/chunk-vendors.3d81aa99.js" rel="preload" as="script"><link href="/css/app.b3b939f8.css" rel="stylesheet"></head><body class="bg-gray-200"><noscript><strong>We're sorry but Donkey Farm Games doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.3d81aa99.js"></script><script src="/js/app.366d851b.js"></script></body></html>
